production_rust/target/debug/build/claims-d5950402baf151fb/stderr
error[E0433]: failed to resolve: maybe a missing crate `core`?
 --> <anon>:1:9
  |
1 | pub use core::task::Poll;
  |         ^^^^ maybe a missing crate `core`?
  |
  = help: consider adding `extern crate core` to use the `core` crate

error: aborting due to previous error

For more information about this error, try `rustc --explain E0433`.
